# cli-mystery-starterpack

./: .gitignore  README.md
.claude/audit-reports/: ship_ready_report.md
.github/workflows/: ci.yml  publish.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
cli_mystery_starter/: README.md  dev.py  pyproject.toml
cli_mystery_starter/examples/: mystery_config.json
cli_mystery_starter/src/cli_mystery_starter/: answer.py  cli.py  clues.py  config.py  contract.py  dialogue.py  events.py  runtime.py  scaffold.py  scenes.py  session.py  solutions.py  solver.py  templates.py  validation.py  verifier.py
cli_mystery_starter/tests/: _helpers.py  test_cli_mystery_starter.py  test_clues.py  test_dialogue.py  test_events.py  test_runtime.py  test_scaffold_and_validation.py  test_scenes.py  test_solutions.py  test_solver.py  test_verifier_and_config.py
design_rules_cli/: 00-repo-study-overview.md  01-game-design-study.md  02-engineering-study.md  03-writing-study.md  04-design-rules.md  05-production-blueprint.md  06-author-checklists.md  07-bmad-study-checkpoints.md  README.md
docs/: bmad-checkpoints.md  data-model.md  designing-cli-mystery-games.md  developer-guide.md  index.md  project-overview.md
